Updated with new style and projects

--- a/_src/_includes/footer.njk
+++ b/_src/_includes/footer.njk
@@ -1,4 +1,6 @@
 <footer class="footer">
   <p>&copy; {{ site.name }}
-    {% year %}</p>
+    {% year %}
+  </p>
+  <p>This website created with Eleventy, a static site generator.</p>
 </footer>
