--- a/_src/index.njk
+++ b/_src/index.njk
@@ -3,4 +3,5 @@ title: "xteklab"
 layout: "base.njk"
 ---
 
-<h1>{{ title }}</h1>
+{% include "technologies.njk" %}
+{% include "project-grid.njk" %}
