--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -93,7 +93,7 @@ a {
   position: relative;
   margin-bottom: 1rem;
   margin-right: 1rem;
-  color: var(--amber-600);
+  color: var(--slate-600);
 }
 
 .header__links {
@@ -101,7 +101,7 @@ a {
   gap: 2rem;
   font-size: 1.125rem;
   font-weight: 600;
-  color: var(--amber-700);
+  color: var(--slate-600);
 }
 
 .header__link {
@@ -116,7 +116,7 @@ a {
   height: 2px;
   width: 100%;
   position: absolute;
-  background-color: var(--amber-700);
+  background-color: var(--slate-300);
   transform: scaleX(0);
   transition: transform 0.3s ease 0s;
 }
@@ -136,61 +136,9 @@ a {
   padding: 1rem 0;
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--amber-600);
-}
-
-/* Profile Styles */
-.profile {
-  display: flex;
-  flex-direction: column;
-}
-
-.profile__image-wrapper picture {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.profile__image-wrapper img {
-  width: 250px;
-  height: 250px;
-  border-radius: 9999px;
-}
-
-.profile__card {
-  display: flex;
-  flex-direction: column;
-  padding: 4rem 0;
-  flex: 1;
-}
-
-.profile__text {
-  margin-bottom: 1rem;
   color: var(--slate-600);
 }
 
-.profile__text--lead {
-  font-weight: 500;
-  font-size: 1.5rem;
-}
-
-.profile__text--highlight {
-  font-weight: bold;
-  font-size: 1.5rem;
-  color: var(--amber-600);
-}
-
-.profile__text--emphasis {
-  font-weight: bold;
-  font-size: 1.125rem;
-}
-
-.profile__link {
-  font-weight: bold;
-  text-decoration: underline;
-}
 
 /* Technologies Styles */
 
@@ -200,7 +148,7 @@ a {
   font-size: 2.5rem;
   text-align: center;
   font-weight: 700;
-  color: var(--amber-600);
+  color: var(--slate-600);
 }
 
 .technologies__list {
@@ -244,14 +192,14 @@ a {
   font-size: 2.5rem;
   font-weight: 700;
   text-align: center;
-  color: var(--amber-600);
+  color: var(--slate-600);
 }
 
 .project__heading {
   padding: 1rem 0;
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--amber-600);
+  color: var(--slate-600);
 }
 
 .project-grid {
@@ -303,8 +251,8 @@ a {
   padding: 0.25rem 0.5rem;
   border-radius: 9999px;
   font-size: 0.75rem;
-  background-color: var(--amber-100);
-  color: var(--amber-800);
+  background-color: var(--slate-300);
+  color: var(--slate-600);
 }
 
 .project-card__summary {
@@ -316,7 +264,7 @@ a {
   display: inline-flex;
   align-items: center;
   font-weight: 600;
-  color: var(--amber-700);
+  color: var(--slate-600);
 }
 
 .project-card__link-icon {
@@ -363,7 +311,7 @@ a {
 .prose h3 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
-  color: var(--amber-600);
+  color: var(--slate-600);
 }
 
 .prose ul {
@@ -438,12 +386,12 @@ a {
   border-radius: 0.25rem;
   cursor: pointer;
   color: #fff;
-  background-color: var(--amber-600);
+  background-color: var(--slate-300);
   transition: background-color 0.3s ease;
 }
 
 .form__button:hover {
-  background-color: var(--amber-600);
+  background-color: var(--slate-600);
 }
 
 @media (min-width: 640px) {
